[tool.poetry]
name = "bantha"
version = "1.0.0"
description = "Banthas are sturdy and reliable, just like the schemas and models you want to build."
authors = ["Pedro <pedro@z33dd.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
genson = "^1.3.0"
typer = "^0.12.5"
datamodel-code-generator = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
